# rocks_test

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  json_file.cpp  json_file.h  my_db.cc  rdkafka_version_test.cpp  rocksdb_app.cbp  simple_example  simple_example.cbp
cmake/Modules/: FindRdKafka.cmake
cppkafka-prefix/src/cppkafka-build/: CTestTestfile.cmake  cmake_uninstall.cmake  install_manifest.txt
cppkafka-prefix/src/cppkafka-build/package/: cppkafka.pc
cppkafka-prefix/src/cppkafka-build/tests/: CTestTestfile.cmake
cppkafka-prefix/src/cppkafka-stamp/: cppkafka-gitclone-lastrun.txt
cppkafka-prefix/tmp/: cppkafka-cfgcmd.txt  cppkafka-gitclone.cmake  cppkafka-gitupdate.cmake
package/: CppKafkaConfigVersion.cmake  cppkafka.pc
rdkafka-prefix/src/rdkafka-build/: CTestTestfile.cmake
rdkafka-prefix/src/rdkafka-build/tests/: CTestTestfile.cmake
rdkafka-prefix/src/rdkafka-stamp/: rdkafka-gitclone-lastrun.txt
rdkafka-prefix/tmp/: rdkafka-cfgcmd.txt  rdkafka-gitclone.cmake
